# deep-learning-collection

./: pyproject.toml
dlc/metrics/: codebook_distribution.py  codebook_stats.py  latent_channels.py
dlc/samplers/: maskgit.py
dlc/sd/: attention.py  decoder.py  encoder.py
dlc/trainers/: img_classification.py  maskgit.py  vae.py  vqvae.py
dlc/transformers/: maskgit.py
dlc/vae/: blocks.py  model.py
dlc/vq_vae/: blocks.py  model.py  quantizer.py
notebooks/galaxy10/: classification.ipynb  vq_vae.ipynb
scripts/: example_vqvae.py
