[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['dlc']

[project]
name = "deep-learning-collection"
version = "0.0.1"
authors = [
    { name="Pierre Poitier", email="pierre.poitier@unamur.be" },
]
description = "Collection of Deep Learning algorithms."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]